# kiri

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  kiri.example.toml  mcp.example.json  pyproject.toml
deploy/: kiri.service
src/kiri/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  credentials.py  db.py  http.py  login.py  mcp_auth.py  mcp_client.py  oauth.py  resume.py  skills.py  stt.py  turns.py  usage.py
src/kiri/auth/: cli.py  credentials.py  login.py  mcp.py  oauth.py
src/kiri/engine/: agent.py  context.py  conversation.py  default_prompt.md  llm.py  prompt.py  sessions.py
src/kiri/engine/providers/: __init__.py  anthropic.py  base.py  openai.py  xai.py
src/kiri/scheduling/: store.py  tool.py
src/kiri/skills/: catalog.py
src/kiri/skills/cheat/: SKILL.md
src/kiri/skills/fx/: SKILL.md
src/kiri/skills/remember/: SKILL.md
src/kiri/skills/wttr/: SKILL.md
src/kiri/tools/: __init__.py  ask.py  registry.py  reload.py  shell.py  web.py
src/kiri/transports/: __init__.py  base.py  discorddm.py  registry.py  terminal.py
src/kiri/transports/discord/: client.py  output.py
tests/: conftest.py  test_agent.py  test_app_scheduler.py  test_ask.py  test_config.py  test_context.py  test_credentials.py  test_http.py  test_jobs.py  test_mcp_auth.py  test_mcp_client.py  test_oauth.py  test_providers.py  test_resume.py  test_sessions.py  test_skills.py  test_tools.py  test_turns.py  test_usage.py  test_voice.py  test_xai_auth.py
